--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@prisma/client": "^4.4.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "firebase-admin": "^11.1.0",
     "prisma": "^4.4.0",
     "reflect-metadata": "^0.1.13",
