--- a/package.json
+++ b/package.json
@@ -28,21 +28,26 @@
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@prisma/client": "^4.4.0",
+    "@types/multer": "^1.4.7",
+    "@types/sharp": "^0.31.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "firebase": "^9.13.0",
     "firebase-admin": "^11.1.0",
     "passport": "^0.6.0",
     "passport-http": "^0.3.0",
     "prisma": "^4.5.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "sharp": "^0.31.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
     "@types/express": "^4.17.13",
+    "@types/firebase": "^3.2.1",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.0.0",
     "@types/passport": "^1.0.11",
