--- a/package.json
+++ b/package.json
@@ -34,13 +34,15 @@
     "class-validator": "^0.13.2",
     "firebase": "^9.13.0",
     "firebase-admin": "^11.1.0",
+    "nestjs-form-data": "^1.8.3",
     "passport": "^0.6.0",
     "passport-http": "^0.3.0",
     "prisma": "^4.5.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "sharp": "^0.31.2"
+    "sharp": "^0.31.2",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
@@ -53,6 +55,7 @@
     "@types/passport": "^1.0.11",
     "@types/passport-http": "^0.3.9",
     "@types/supertest": "^2.0.11",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
     "eslint": "^7.30.0",
